# jn-tapi

./: .gitignore  DevelopmentNotes.txt  OnSIP.sln
gloox/: ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  README.win32  UPGRADING  config.h.in  config.h.win  configure  configure.ac  gloox.cbp  gloox.dsp  gloox.vcproj
gloox/src/: Makefile.am  Makefile.in  attention.h  clientbase.cpp  clientbase.h  compressionbase.h  connectionbosh.cpp  connectionbosh.h  connectionhandler.h  connectiontcpserver.cpp  connectiontls.h  dataform.cpp  dataform.h  dataformfield.h  disco.cpp  disco.h  dns.cpp  dns.h  flexoff.cpp  gloox.cpp  gloox.h  jingledescription.h  lastactivity.cpp  lastactivity.h  lastactivityhandler.h  md5.cpp  messagesession.h  mucroom.cpp  mucroom.h  presence.cpp  presence.h  privacymanager.cpp  pubsub.h  pubsubevent.cpp  pubsubevent.h  pubsubitem.h  pubsubmanager.cpp  pubsubmanager.h  pubsubresulthandler.h  resource.h  (+13 more)
gloox/src/examples/: Makefile.am  Makefile.in  adhoc_example.cpp  bosh_example.cpp  component_example.cpp  disco_example.cpp  e2ee_client.cpp  e2ee_server.cpp  flexoff_example.cpp  ft_recv.cpp  ft_send.cpp  message_example.cpp  muc_example.cpp  privacylist_example.cpp  privatexml_example.cpp  register_example.cpp  roster_example.cpp  vcard_example.cpp
gloox/src/tests/: Makefile.am  Makefile.in
gloox/src/tests/adhoc/: Makefile.am  Makefile.in  adhoc_test.cpp
gloox/src/tests/adhoccommand/: Makefile.am  Makefile.in  adhoccommand_test.cpp
gloox/src/tests/adhoccommandnote/: Makefile.am  Makefile.in  adhoccommandnote_test.cpp
gloox/src/tests/amp/: Makefile.am  Makefile.in  amp_test.cpp
gloox/src/tests/amprule/: Makefile.am  Makefile.in  amprule_test.cpp
gloox/src/tests/base64/: Makefile.in  base64_test.cpp
gloox/src/tests/chatstatefilter/: Makefile.am  Makefile.in  chatstatefilter_test.cpp
gloox/src/tests/client/: Makefile.am  Makefile.in  client_test.cpp
gloox/src/tests/clientbase/: Makefile.am  Makefile.in  clientbase_test.cpp
gloox/src/tests/connectionbosh/: Makefile.am  Makefile.in  connectionbosh_test.cpp
gloox/src/tests/dataform/: Makefile.am  Makefile.in  dataform_test.cpp
gloox/src/tests/dataformfield/: Makefile.am  Makefile.in  dataformfield_test.cpp
gloox/src/tests/dataformitem/: Makefile.am  Makefile.in  dataformitem_test.cpp
gloox/src/tests/dataformreported/: Makefile.am  Makefile.in  dataformreported_test.cpp
gloox/src/tests/delayeddelivery/: Makefile.am  Makefile.in  delayeddelivery_test.cpp
gloox/src/tests/disco/: Makefile.am  Makefile.in  disco_test.cpp
gloox/src/tests/discoinfo/: Makefile.am  Makefile.in  discoinfo_test.cpp
gloox/src/tests/discoitems/: Makefile.am  Makefile.in  discoitems_test.cpp
gloox/src/tests/error/: Makefile.am  Makefile.in  error_test.cpp
gloox/src/tests/featureneg/: Makefile.am  Makefile.in  featureneg_test.cpp
gloox/src/tests/flexoffline/: Makefile.am  Makefile.in  flexoffline_test.cpp
gloox/src/tests/flexofflineoffline/: Makefile.am  Makefile.in  flexofflineoffline_test.cpp
gloox/src/tests/gpgencrypted/: Makefile.am  Makefile.in  gpgencrypted_test.cpp
gloox/src/tests/gpgsigned/: Makefile.am  Makefile.in  gpgsigned_test.cpp
gloox/src/tests/inbandbytestream/: Makefile.am  Makefile.in  inbandbytestream_test.cpp
gloox/src/tests/inbandbytestreamibb/: Makefile.am  Makefile.in
gloox/src/tests/iq/: Makefile.am  Makefile.in  iq_test.cpp
gloox/src/tests/jid/: Makefile.am  Makefile.in  jid_perf.cpp  jid_test.cpp
gloox/src/tests/jingleaudiortp/: Makefile.am  Makefile.in  jingleaudiortp_test.cpp
gloox/src/tests/jingleiceudp/: Makefile.am  Makefile.in  jingleiceudp_test.cpp
gloox/src/tests/jinglerawudp/: Makefile.am  Makefile.in  jinglerawudp_test.cpp
gloox/src/tests/jinglesession/: Makefile.am  Makefile.in  jinglesession_test.cpp
gloox/src/tests/jinglesessionjingle/: Makefile.am  Makefile.in  jinglesessionjingle_test.cpp
gloox/src/tests/jinglevideortp/: Makefile.am  Makefile.in  jinglevideortp_test.cpp
gloox/src/tests/lastactivity/: Makefile.am  Makefile.in  lastactivity_test.cpp
gloox/src/tests/lastactivityquery/: Makefile.am  Makefile.in  lastactivityquery_test.cpp
gloox/src/tests/md5/: Makefile.in  md5_test.cpp
gloox/src/tests/message/: Makefile.am  Makefile.in  message_test.cpp
gloox/src/tests/messageeventfilter/: Makefile.am  Makefile.in  messageeventfilter_test.cpp
gloox/src/tests/mucroommuc/: Makefile.am  Makefile.in  mucroommuc_test.cpp
gloox/src/tests/mucroommucadmin/: Makefile.am  Makefile.in  mucroommucadmin_test.cpp
gloox/src/tests/mucroommucowner/: Makefile.am  Makefile.in  mucroommucowner_test.cpp
gloox/src/tests/mucroommucuser/: Makefile.am  Makefile.in  mucroommucuser_test.cpp
gloox/src/tests/nickname/: Makefile.am  Makefile.in  nickname_test.cpp
gloox/src/tests/nonsaslauth/: Makefile.am  Makefile.in  nonsaslauth_test.cpp
gloox/src/tests/nonsaslauthquery/: Makefile.am  Makefile.in  nonsaslauthquery_test.cpp
gloox/src/tests/oob/: Makefile.am  Makefile.in  oob_test.cpp
gloox/src/tests/parser/: Makefile.am  Makefile.in  parser_test.cpp
gloox/src/tests/prep/: Makefile.in  prep_test.cpp
gloox/src/tests/presence/: Makefile.am  Makefile.in  presence_test.cpp
gloox/src/tests/privacymanager/: Makefile.am  Makefile.in  privacymanager_test.cpp
gloox/src/tests/privacymanagerquery/: Makefile.am  Makefile.in  privacymanagerquery_test.cpp
gloox/src/tests/privatexml/: Makefile.am  Makefile.in  privatexml_test.cpp
gloox/src/tests/pubsubevent/: Makefile.am  Makefile.in  pubsubevent_test.cpp
gloox/src/tests/pubsubmanager/: Makefile.am  Makefile.in  pubsubmanager_test.cpp
gloox/src/tests/pubsubmanagerpubsub/: Makefile.am  Makefile.in  pubsubmanagerpubsub_test.cpp
gloox/src/tests/receipt/: Makefile.am  Makefile.in  receipt_test.cpp
gloox/src/tests/registration/: Makefile.am  Makefile.in  registration_test.cpp
gloox/src/tests/registrationquery/: Makefile.am  Makefile.in  registrationquery_test.cpp
gloox/src/tests/rostermanager/: Makefile.am  Makefile.in  rostermanager_test.cpp
gloox/src/tests/search/: Makefile.am  (+2 more)
(+286 files in other folders)
